fix: Alignment fix for tags and published time in forums

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -437,3 +437,11 @@ body {
 //     position: absolute;
 //     left: -20px;
 // }
+
+.marR {
+    margin-right: 15px;
+}
+
+.marL {
+    margin-left: 15px;
+}
